<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEAFE "
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_beauty"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_your_name"
        android:textAlignment="center"
        android:textColor="#070707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/enter_your_emaill"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textColorHint="#020202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/pasword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textColorHint="#040404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="374dp"
        android:layout_height="62dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textColorHint="#050505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="295dp"
        android:layout_height="67dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="#ff99de"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="7dp"
        android:text="Already have an account?"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>